--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "Swag Labs Automation",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.16.2",
     "@wdio/cli": "^9.15.0",
     "@wdio/local-runner": "^9.15.0",
     "@wdio/mocha-framework": "^9.15.0",
     "@wdio/spec-reporter": "^9.15.0"
   },
   "scripts": {
-    "wdio": "wdio run ./wdio.conf.js"
+    "wdio": "wdio run ./wdio.conf.js",
+    "clean": "rm -rf ./reports ./allure-results ./allure-report",
+    "generateReport": "allure serve allure-results"
   }
 }
