--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run WebdriverIO tests
-        run: npx wdio run wdio.conf.js --headless
+      - name: Run WebdriverIO tests and clean outcome directory
+        run: npm run test
+
+      - name: Generate Allure report
+        run: npm run generateReport
 
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
