--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@wdio/local-runner": "^9.15.0",
     "@wdio/mocha-framework": "^9.15.0",
     "@wdio/spec-reporter": "^9.15.0",
+    "allure-commandline": "^2.34.1",
     "rimraf": "^6.0.1"
   },
   "scripts": {
