--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "wdio": "wdio run ./wdio.conf.js",
     "clean": "rimraf ./reports ./allure-results ./allure-report",
     "test": "npm run clean && npm run wdio",
-    "generateReport": "allure serve allure-results",
+    "generateReport": "allure generate allure-results --clean -o allure-report",
     "local": "TEST_ENV=QA BROWSER=Chrome npx wdio run wdio.conf.js"
   }
 }
